# inertia.ml

./: .gitignore  LICENSE  README.md  dune-project  inertia_ml.opam  notes.md
example/: README.md  app.ml  dune  events_controller.ml  main.ml  root_template.eml.ml
example/client/: README.md  app.js  bun.lockb  index.html  package.json  vite.config.js
example/client/Pages/Articles/: Articles.vue
example/js/: bun.lockb  main.jsx  package.json  vite.config.js
example/js/pages/: Welcome.jsx  Welcome.svelte
example/js/pages/Event/: Index.jsx  Index.svelte  Show.jsx  Show.svelte
src/: context.ml  dune  inertia.ml  inertia.mli  middleware.ml  types.ml
src/fs/: dune  fs.ml  fs.mli
src/html/: app.html
test/: dune  test_inertia_ocaml.ml
